better solution for horizontal scrolling bug

--- a/styles/_cards.scss
+++ b/styles/_cards.scss
@@ -1,9 +1,9 @@
-body {
-  margin: -1% -1% -1% -1%;
-  overflow-x: hidden;
-}
-
+body,
 html {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
   overflow-x: hidden;
 }
 
