--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -16,7 +16,7 @@
   background-repeat: no-repeat;
   background-position-x: center;
   background-position-y: 50%;
-  width: 100%;
+  width: auto;
   height: 35%;
   color: $white;
   background-size: cover;
